src/objects/Contracts__c.object
<CustomObject>
    <fields>
        <fullName>Client_Contract_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Contract Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Category__c</fullName>
        <label>Contract Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Decision_Contract_Integration_D__c</fullName>
        <label>Contract Decision/Contract Integration D</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Keep until Contract End</fullName>
                </value>
                <value>
                    <fullName>Renew</fullName>
                </value>
                <value>
                    <fullName>Terminate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Notes__c</fullName>
        <label>Contract Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Specific_Type__c</fullName>
        <label>Contract Specific Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>License</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Hosting</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Multiple</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Status__c</fullName>
        <label>Contract Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Renewed</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>License</fullName>
                </value>
                <value>
                    <fullName>Agreement</fullName>
                </value>
                <value>
                    <fullName>SOW</fullName>
                </value>
                <value>
                    <fullName>Inventory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_of_this_purchase__c</fullName>
        <label>Cost of this purchase</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Contract</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contract_Status__c</columns>
        <columns>Contract_Type__c</columns>
        <columns>Contract_Category__c</columns>
        <columns>Client_Contract_Lead__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Contracts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contracts</pluralLabel>
    <recordTypes>
        <fullName>DRDW_Contract</fullName>
        <active>true</active>
        <label>DRDW Contract</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>